--- a/segurenta/package.json
+++ b/segurenta/package.json
@@ -31,6 +31,7 @@
         "animate.css": "^3.7.0",
         "core-js": "^2.5.4",
         "express": "^4.16.4",
+        "ng2-pdf-viewer": "^5.2.3",
         "rxjs": "~6.3.3",
         "tslib": "^1.9.0",
         "typescript": "~3.2.2",
