--- a/segurenta/package.json
+++ b/segurenta/package.json
@@ -29,9 +29,12 @@
         "@fortawesome/free-regular-svg-icons": "^5.7.2",
         "@fortawesome/free-solid-svg-icons": "^5.7.2",
         "animate.css": "^3.7.0",
+        "bootstrap": "^4.3.1",
         "core-js": "^2.5.4",
         "express": "^4.16.4",
+        "jquery": "^3.3.1",
         "ng2-pdf-viewer": "^5.2.3",
+        "popper.js": "^1.14.7",
         "rxjs": "~6.3.3",
         "tslib": "^1.9.0",
         "typescript": "~3.2.2",
