--- a/segurenta/package.json
+++ b/segurenta/package.json
@@ -8,48 +8,54 @@
         "test": "ng test",
         "lint": "ng lint",
         "e2e": "ng e2e",
-        "postinstall": "ng build"
+        "postinstall": "ng build --prod"
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "^7.2.6",
-        "@angular/cdk": "^7.3.3",
-        "@angular/cli": "^7.3.3",
-        "@angular/common": "^7.2.6",
-        "@angular/compiler": "^7.2.6",
-        "@angular/compiler-cli": "^7.2.6",
-        "@angular/core": "^7.2.6",
+        "@agm/core": "^1.0.0-beta.5",
+        "@angular/animations": "^7.2.4",
+        "@angular/cdk": "^7.3.2",
+        "@angular/common": "~7.2.0",
+        "@angular/compiler": "~7.2.0",
+        "@angular/core": "~7.2.0",
         "@angular/flex-layout": "^7.0.0-beta.23",
-        "@angular/forms": "^7.2.6",
-        "@angular/language-service": "^7.2.6",
-        "@angular/material": "^7.3.3",
-        "@angular/platform-browser": "^7.2.6",
-        "@angular/platform-browser-dynamic": "^7.2.6",
-        "@angular/router": "^7.2.6",
+        "@angular/forms": "~7.2.0",
+        "@angular/material": "^7.3.2",
+        "@angular/platform-browser": "~7.2.0",
+        "@angular/platform-browser-dynamic": "~7.2.0",
+        "@angular/router": "~7.2.0",
         "@fortawesome/angular-fontawesome": "^0.3.0",
         "@fortawesome/fontawesome-svg-core": "^1.2.15",
         "@fortawesome/free-brands-svg-icons": "^5.7.2",
         "@fortawesome/free-regular-svg-icons": "^5.7.2",
         "@fortawesome/free-solid-svg-icons": "^5.7.2",
         "animate.css": "^3.7.0",
-        "core-js": "^2.6.5",
+        "bootstrap": "^4.3.1",
+        "core-js": "^2.5.4",
         "express": "^4.16.4",
+        "jquery": "^3.3.1",
+        "ng2-pdf-viewer": "^5.2.3",
+        "popper.js": "^1.14.7",
         "rxjs": "~6.3.3",
         "tslib": "^1.9.0",
         "typescript": "~3.2.2",
         "zone.js": "~0.8.26"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^0.13.3",
+        "@angular-devkit/build-angular": "~0.13.0",
+        "@angular/cli": "~7.3.0",
+        "@angular/compiler-cli": "^7.2.5",
+        "@angular/language-service": "~7.2.0",
         "@types/jasmine": "~2.8.8",
         "@types/jasminewd2": "~2.0.3",
         "@types/node": "~8.9.4",
+        "angular-file": "^1.0.2",
         "codelyzer": "~4.5.0",
         "jasmine-core": "~2.99.1",
         "jasmine-spec-reporter": "~4.2.1",
         "karma": "~3.1.1",
         "karma-chrome-launcher": "~2.2.0",
-        "karma-coverage-istanbul-reporter": "^2.0.5",
+        "karma-coverage-istanbul-reporter": "~2.0.1",
         "karma-jasmine": "~1.1.2",
         "karma-jasmine-html-reporter": "^0.2.2",
         "protractor": "~5.4.0",
