--- a/segurenta/angular.json
+++ b/segurenta/angular.json
@@ -26,7 +26,9 @@
                             "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
                             "src/styles.css",
                             "./node_modules/animate.css/animate.css",
-                            "node_modules/bootstrap/dist/css/bootstrap.min.css"
+                            "node_modules/bootstrap/dist/css/bootstrap.min.css",
+                            "./assets/fonts/material-icons/material-icons.css"
+
                         ],
                         "scripts": [
                             "node_modules/jquery/dist/jquery.slim.min.js",
