--- a/segurenta/angular.json
+++ b/segurenta/angular.json
@@ -25,10 +25,9 @@
                         "styles": [
                             "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
                             "src/styles.css",
+                            "./node_modules/videogular2/fonts/videogular.css",
                             "./node_modules/animate.css/animate.css",
-                            "node_modules/bootstrap/dist/css/bootstrap.min.css",
-                            "./assets/fonts/material-icons/material-icons.css"
-
+                            "node_modules/bootstrap/dist/css/bootstrap.min.css"
                         ],
                         "scripts": [
                             "node_modules/jquery/dist/jquery.slim.min.js",
