--- a/segurenta/package.json
+++ b/segurenta/package.json
@@ -39,13 +39,15 @@
         "rxjs": "~6.3.3",
         "tslib": "^1.9.0",
         "typescript": "~3.2.2",
+        "videogular2": "^6.4.0",
         "zone.js": "~0.8.26"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "~0.13.0",
         "@angular/cli": "~7.3.0",
-        "@angular/compiler-cli": "^7.2.10",
+        "@angular/compiler-cli": "^7.2.5",
         "@angular/language-service": "~7.2.0",
+        "@types/core-js": "^2.5.0",
         "@types/jasmine": "~2.8.8",
         "@types/jasminewd2": "~2.0.3",
         "@types/node": "~8.9.4",
@@ -53,7 +55,7 @@
         "codelyzer": "~4.5.0",
         "jasmine-core": "~2.99.1",
         "jasmine-spec-reporter": "~4.2.1",
-        "karma": "^4.0.1",
+        "karma": "~3.1.1",
         "karma-chrome-launcher": "~2.2.0",
         "karma-coverage-istanbul-reporter": "~2.0.1",
         "karma-jasmine": "~1.1.2",
