--- a/segurenta/package.json
+++ b/segurenta/package.json
@@ -8,7 +8,7 @@
         "test": "ng test",
         "lint": "ng lint",
         "e2e": "ng e2e",
-        "postinstall": "ng build --prod"
+        "postinstall": "ng build"
     },
     "private": true,
     "dependencies": {
@@ -24,6 +24,10 @@
         "@angular/platform-browser": "~7.2.0",
         "@angular/platform-browser-dynamic": "~7.2.0",
         "@angular/router": "~7.2.0",
+        "@angular-devkit/build-angular": "~0.13.0",
+        "@angular/cli": "~7.3.0",
+        "@angular/compiler-cli": "^7.2.5",
+        "@angular/language-service": "~7.2.0",
         "@fortawesome/angular-fontawesome": "^0.3.0",
         "@fortawesome/fontawesome-svg-core": "^1.2.15",
         "@fortawesome/free-brands-svg-icons": "^5.7.2",
@@ -43,10 +47,6 @@
         "zone.js": "~0.8.26"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "~0.13.0",
-        "@angular/cli": "~7.3.0",
-        "@angular/compiler-cli": "^7.2.5",
-        "@angular/language-service": "~7.2.0",
         "@types/core-js": "^2.5.0",
         "@types/jasmine": "~2.8.8",
         "@types/jasminewd2": "~2.0.3",
