--- a/segurenta/angular.json
+++ b/segurenta/angular.json
@@ -56,6 +56,26 @@
                                 "maximumWarning": "2mb",
                                 "maximumError": "5mb"
                             }]
+                        },
+                        "dummys": {
+                            "fileReplacements": [{
+                                "replace": "src/environments/environment.prod.ts",
+                                "with": "src/environments/environment.ts"
+                            }],
+                            "optimization": true,
+                            "outputHashing": "all",
+                            "sourceMap": false,
+                            "extractCss": true,
+                            "namedChunks": false,
+                            "aot": true,
+                            "extractLicenses": true,
+                            "vendorChunk": false,
+                            "buildOptimizer": true,
+                            "budgets": [{
+                                "type": "initial",
+                                "maximumWarning": "2mb",
+                                "maximumError": "5mb"
+                            }]
                         }
                     }
                 },
@@ -67,6 +87,9 @@
                     "configurations": {
                         "production": {
                             "browserTarget": "segurenta:build:production"
+                        },
+                        "dummys": {
+                            "browserTarget": "segurenta:build:dummys"
                         }
                     }
                 },
