--- a/segurenta/package.json
+++ b/segurenta/package.json
@@ -5,8 +5,6 @@
         "ng": "ng",
         "start": "node server.js",
         "build": "ng build",
-        "build-prod": "ng build --configuration=production --base-href /url/",
-        "build-dummys": "ng build --configuration=dummys",
         "test": "ng test",
         "lint": "ng lint",
         "e2e": "ng e2e",
@@ -26,7 +24,6 @@
         "@angular/platform-browser": "~7.2.0",
         "@angular/platform-browser-dynamic": "~7.2.0",
         "@angular/router": "~7.2.0",
-        "@angular-devkit/build-angular": "~0.13.0",
         "@angular/cli": "~7.3.0",
         "@angular/compiler-cli": "^7.2.5",
         "@angular/language-service": "~7.2.0",
@@ -49,12 +46,16 @@
         "zone.js": "~0.8.26"
     },
     "devDependencies": {
+        "@angular-builders/custom-webpack": "^7.4.3",
+        "@angular-builders/dev-server": "^7.3.1",
+        "@angular-devkit/build-angular": "^0.13.7",
         "@types/core-js": "^2.5.0",
         "@types/jasmine": "~2.8.8",
         "@types/jasminewd2": "~2.0.3",
         "@types/node": "~8.9.4",
         "angular-file": "^1.0.2",
         "codelyzer": "~4.5.0",
+        "dotenv": "^7.0.0",
         "jasmine-core": "~2.99.1",
         "jasmine-spec-reporter": "~4.2.1",
         "karma": "~3.1.1",
