--- a/segurenta/package.json
+++ b/segurenta/package.json
@@ -33,6 +33,7 @@
         "@fortawesome/free-brands-svg-icons": "^5.7.2",
         "@fortawesome/free-regular-svg-icons": "^5.7.2",
         "@fortawesome/free-solid-svg-icons": "^5.7.2",
+        "@types/googlemaps": "^3.30.19",
         "animate.css": "^3.7.0",
         "bootstrap": "^4.3.1",
         "core-js": "^2.5.4",
