--- a/segurenta/package.json
+++ b/segurenta/package.json
@@ -33,10 +33,13 @@
         "@fortawesome/free-brands-svg-icons": "^5.7.2",
         "@fortawesome/free-regular-svg-icons": "^5.7.2",
         "@fortawesome/free-solid-svg-icons": "^5.7.2",
+        "@ng-bootstrap/ng-bootstrap": "^4.1.1",
         "@types/googlemaps": "^3.30.19",
+        "angular-calendar": "^0.27.3",
         "animate.css": "^3.7.0",
         "bootstrap": "^4.3.1",
         "core-js": "^2.5.4",
+        "date-fns": "^1.30.1",
         "express": "^4.16.4",
         "jquery": "^3.3.1",
         "ng2-pdf-viewer": "^5.2.3",
