--- a/segurenta/angular.json
+++ b/segurenta/angular.json
@@ -30,7 +30,8 @@
                             "src/styles.css",
                             "./node_modules/videogular2/fonts/videogular.css",
                             "./node_modules/animate.css/animate.css",
-                            "node_modules/bootstrap/dist/css/bootstrap.min.css"
+                            "node_modules/bootstrap/dist/css/bootstrap.min.css",
+                            "node_modules/angular-calendar/css/angular-calendar.css"
                         ],
                         "scripts": [
                             "node_modules/jquery/dist/jquery.slim.min.js",
