--- a/segurenta/angular.json
+++ b/segurenta/angular.json
@@ -31,12 +31,14 @@
                             "./node_modules/videogular2/fonts/videogular.css",
                             "./node_modules/animate.css/animate.css",
                             "node_modules/bootstrap/dist/css/bootstrap.min.css",
-                            "node_modules/angular-calendar/css/angular-calendar.css"
+                            "node_modules/angular-calendar/css/angular-calendar.css",
+                            "node_modules/flatpickr/dist/flatpickr.css"
                         ],
                         "scripts": [
                             "node_modules/jquery/dist/jquery.slim.min.js",
                             "node_modules/popper.js/dist/umd/popper.min.js",
-                            "node_modules/bootstrap/dist/js/bootstrap.min.js"
+                            "node_modules/bootstrap/dist/js/bootstrap.min.js",
+                            "node_modules/flatpickr/dist/flatpickr.js"
                         ],
                         "es5BrowserSupport": true
                     },
