--- a/segurenta/angular.json
+++ b/segurenta/angular.json
@@ -39,7 +39,8 @@
                             "node_modules/popper.js/dist/umd/popper.min.js",
                             "node_modules/bootstrap/dist/js/bootstrap.min.js",
                             "node_modules/flatpickr/dist/flatpickr.js",
-                            "node_modules/flatpickr/dist/l10n/es.js"
+                            "node_modules/flatpickr/dist/l10n/es.js",
+                            "node_modules/moment/min/moment.min.js"
                         ],
                         "es5BrowserSupport": true
                     },
