--- a/segurenta/package.json
+++ b/segurenta/package.json
@@ -35,6 +35,7 @@
         "@fortawesome/free-solid-svg-icons": "^5.7.2",
         "@ng-bootstrap/ng-bootstrap": "^4.1.1",
         "@types/googlemaps": "^3.30.19",
+        "@types/moment": "^2.13.0",
         "angular-calendar": "^0.27.3",
         "angularx-flatpickr": "^6.1.0",
         "animate.css": "^3.7.0",
@@ -44,6 +45,7 @@
         "express": "^4.16.4",
         "flatpickr": "^4.5.7",
         "jquery": "^3.3.1",
+        "moment": "^2.24.0",
         "ng2-pdf-viewer": "^5.2.3",
         "popper.js": "^1.14.7",
         "rxjs": "~6.3.3",
